--- a/front/assets/login.html
+++ b/front/assets/login.html
@@ -4,16 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
@@ -23,7 +15,7 @@
         <div class="row full-height justify-content-center">
           <div class="col-12 text-center align-self-center py-5">
             <div class="section pb-5 pt-5 pt-sm-2 text-center">
-              <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+              <h6 class="mb-0 pb-3"><span>Iniciar sesion </span><span>Registrarse</span></h6>
               <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
               <label for="reg-log"></label>
               <div class="card-3d-wrap mx-auto">
@@ -31,36 +23,18 @@
                   <div class="card-front">
                     <div class="center-wrap">
                       <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Log In</h4>
+                        <h4 class="mb-4 pb-3">Iniciar Sesion</h4>
                         <form id="frmLogin" data-tipo="login">
                           <div class="form-group">
-                            <input
-                              type="text"
-                              name="logemail"
-                              class="form-style"
-                              placeholder="Your Email"
-                              id="userName"
-                              autocomplete="off"
-                              required
-                            />
-                            <i class="input-icon uil uil-user"></i>
+                            <input type="text" name="logemail" class="form-style" placeholder="Your Email" id="userName" autocomplete="off" required/><i class="input-icon uil uil-user"></i>
                           </div>
                           <div class="form-group mt-2">
-                            <input
-                              type="password"
-                              name="logpass"
-                              class="form-style"
-                              placeholder="Your Password"
-                              id="userPass"
-                              autocomplete="off"
-                              required
-                            />
-                            <i class="input-icon uil uil-lock-alt"></i>
+                            <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="userPass" autocomplete="off" required/><i class="input-icon uil uil-lock-alt"></i>
                           </div>
                           <button type="submit" class="btn mt-4">Enviar</button>
                         </form>
                         <p class="mb-0 mt-4 text-center">
-                          <a href="#0" class="link">Forgot your password?</a>
+                          <a href="#0" class="link">¿Olvidaste la contraseña?</a>
                         </p>
                       </div>
                     </div>
@@ -68,53 +42,21 @@
                   <div class="card-back">
                     <div class="center-wrap">
                       <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Sign Up</h4>
-
+                        <h4 class="mb-4 pb-3">Registrarse</h4>
                         <form id="frmRegister" data-tipo="register">
                           <div class="form-group">
-                            <input
-                              type="text"
-                              name="logname"
-                              class="form-style"
-                              placeholder="Your Name User"
-                              id="regUserName"
-                              autocomplete="off"
-                              required
-                            />
-                            <i class="input-icon uil uil-user"></i>
+                            <input type="text" name="logname" class="form-style" placeholder="Your Name User" id="regUserName" autocomplete="off" required/><i class="input-icon uil uil-user"></i>
+                          </div>
+                          <div class="form-group mt-2">
+                            <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="regUserEmail" autocomplete="off" required/><i class="input-icon uil uil-at"></i>
                           </div>
                           <div class="form-group mt-2">
                             <input
-                              type="email"
-                              name="logemail"
-                              class="form-style"
-                              placeholder="Your Email"
-                              id="regUserEmail"
-                              autocomplete="off"
-                              required
-                            />
-                            <i class="input-icon uil uil-at"></i>
+                              type="password" name="logpass" class="form-style" placeholder="Your Password" id="regUserPass" autocomplete="off" required/><i class="input-icon uil uil-lock-alt"></i>
                           </div>
                           <div class="form-group mt-2">
-                            <input
-                              type="password"
-                              name="logpass"
-                              class="form-style"
-                              placeholder="Your Password"
-                              id="regUserPass"
-                              autocomplete="off"
-                              required
-                            />
-                            <i class="input-icon uil uil-lock-alt"></i>
-                          </div>
-                          <div class="form-group mt-2">
-                            <select
-                              class="form-select form-style"
-                              id="regPaisUser"
-                              aria-describedby="validationServer04Feedback"
-                              required
-                            >
-                              <option selected disabled value="">Your Coutry...</option>
+                            <select class="form-select form-style" id="regPaisUser" aria-describedby="validationServer04Feedback"required>
+                              <option selected disabled value="">Pais...</option>
                               <option>...</option>
                               <option value="Afganistán">Afganistán</option>
                               <option value="Albania">Albania</option>
@@ -175,8 +117,6 @@
                               <option value="España">España</option>
                               <option value="Estados Unidos">Estados Unidos</option>
                               <option value="Estonia">Estonia</option>
-                              <option value="Esuatini">Esuatini</option>
-                              <option value="Etiopía">Etiopía</option>
                               <option value="Filipinas">Filipinas</option>
                               <option value="Finlandia">Finlandia</option>
                               <option value="Fiyi">Fiyi</option>
@@ -195,13 +135,9 @@
                               <option value="Haití">Haití</option>
                               <option value="Honduras">Honduras</option>
                               <option value="Hungría">Hungría</option>
-                              <option value="India">India</option>
                               <option value="Indonesia">Indonesia</option>
-                              <option value="Irak">Irak</option>
-                              <option value="Irán">Irán</option>
                               <option value="Irlanda">Irlanda</option>
                               <option value="Islandia">Islandia</option>
-                              <option value="Israel">Israel</option>
                               <option value="Italia">Italia</option>
                               <option value="Jamaica">Jamaica</option>
                               <option value="Japón">Japón</option>
@@ -211,15 +147,12 @@
                               <option value="Kirguistán">Kirguistán</option>
                               <option value="Kiribati">Kiribati</option>
                               <option value="Kuwait">Kuwait</option>
-                              <option value="Laos">Laos</option>
                               <option value="Lesoto">Lesoto</option>
                               <option value="Letonia">Letonia</option>
                               <option value="Líbano">Líbano</option>
                               <option value="Liberia">Liberia</option>
                               <option value="Libia">Libia</option>
-                              <option value="Liechtenstein">Liechtenstein</option>
                               <option value="Lituania">Lituania</option>
-                              <option value="Luxemburgo">Luxemburgo</option>
                             </select>
                             <i class="input-icon uil uil-lock-alt"></i>
                           </div>
@@ -235,11 +168,7 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/assets/js/login.js"></script>
   </body>
